# fu4-group

contracts/fu4-group/: Cargo.toml
contracts/fu4-group/examples/: schema.rs
contracts/fu4-group/src/: contract.rs  error.rs  helpers.rs  lib.rs  msg.rs  state.rs
