[package]
name = "fu4-group"
version = "0.1.0"
edition = "2021"
description = "Simple tg4 implementation of group membership controlled by admin"
license = "Apache-2.0"
homepage = "https://cosmwasm.com"
documentation = "https://docs.cosmwasm.com"

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "artifacts/*",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[dependencies]
# Add the latest versions of the following dependencies
cosmwasm-std = "1.0.0-beta1"
cosmwasm-storage = "1.0.0-beta1"
schemars = "0.8.16"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
cw-storage-plus = "1.1.0"
cw-utils = "1.0.3"


[dev-dependencies]
cosmwasm-schema = "1.1.9"